--- a/projeto2/StyleIndex.css
+++ b/projeto2/StyleIndex.css
@@ -8,9 +8,18 @@ body {
     background-color: #E7E7E7E7;
     padding-top: 100px;
 }
+
+.conteiner {
+    max-width: 960px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+
 header {
     display: flex;
     align-items: center;
+    margin-bottom: 40px;
 }
 header img {
     height: 36px;
@@ -20,8 +29,32 @@ header h1{
     font-size: 40px;
     font-weight: bold;
 }
-.conteiner {
-    max-width: 960px;
+form{
+    display: flex;
+    max-width: 640px;
     width: 100%;
-    margin: 0 auto;
+    justify-content: space-between;
+    margin-bottom: 56px;
+}
+form input{
+    font-size: 24px;
+    background-color: azure;
+    border: none;
+    border-bottom: 2px solid black;
+    padding: 8px;
+}
+form button{
+    background-color: #009432;
+    color:azure;
+    font-size: 24px;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    padding: 8px;
+}
+table th{
+    border-bottom: 2px solid black ;
+    padding: 16px;
+    font-size: 24px;
+    font-weight: bold;
 }
