--- a/projeto2/StyleIndex.css
+++ b/projeto2/StyleIndex.css
@@ -58,3 +58,25 @@ table th{
     font-size: 24px;
     font-weight: bold;
 }
+table td{
+    padding: 16px 0;
+    text-align: center;
+    font-size: 24px;
+    border-bottom: 1px solid rgba(0, 0 ,0 ,0.5);
+}
+table td img{
+    height: 36px;
+}
+.resultado {
+    padding: 8px;
+    font-weight: bold;
+    color: azure;
+    background-color: black;
+    border-radius: 3px;
+}
+.aprovado{
+    background-color: #009432;
+}
+.reprovado{
+    background-color: red;
+}
